syntax = "proto3";
package mzdb;

service Node {
  rpc Whothis (WhoisRequest) returns (LookupResponse);
  rpc Lookup (LookupRequest) returns (LookupResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Set (SetRequest) returns (SetResponse);
}

message WhoisRequest {}

message LookupRequest {
  uint64 key_slot = 1;
  bool relay      = 2;
}

message LookupResponse {
  uint64 key_slot  = 1;
  string addr      = 2;
}

message GetRequest {
  string key = 1;
  bool relay = 2;
}

message GetResponse {
  oneof response {
    bytes value  = 1;
    string error = 2;
  }
}

message SetRequest {
  string key  = 1;
  bytes value = 2;
  bool relay  = 3;
}

message SetResponse {
  bool success = 1;
}
